# D7050E-Compiler

./: Cargo.toml  README.md
src/: ast.rs  interpreter.rs  memory.rs  parser.lalrpop  typechecker.rs
src/tests/borrowchecker/: test.rs
src/tests/interpreter/: math.rs  math_print.rs
src/tests/parser/: p1.rs  p2.rs
src/tests/typechecker/: func_arg.rs  mut.rs  ret.rs  wrongtype.rs
