[package]
name = "d7050e_2020"
version = "0.1.0"
authors = ["David Eriksson <daveri-7@student.ltu.se>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

[build-dependencies.lalrpop] 
version = "0.19.0"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.1"
regex = "1.3.9"

# lalrpop = {version = "0.19.1", features = ["lexer"] }

[[bin]]
name = "interpreter"
path = "src/interpreter.rs"

[[bin]]
name = "typechecker"
path = "src/typechecker.rs"